Footer еще не доделал
Для ускорения прогресса подглядывал к Вам.
Очень объемная домашка)
Но и в тоже время очень интересно.
Спасибо Вам)

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,69 @@
+@font-face {
+    font-family: "Raleway Black";
+    src: url(../fonts/Raleway-Black.ttf);
+}
+
+@font-face {
+    font-family: "Raleway Black Italic";
+    src: url(../fonts/Raleway-Black-Italic.ttf);
+}
+
+@font-face {
+    font-family: "Raleway Bold";
+    src: url(../fonts/Raleway-Bold.ttf);
+}
+
+@font-face {
+    font-family: "Raleway Bold Italic";
+    src: url(../fonts/Raleway-Bold-Italic.ttf);
+}
+
+@font-face {
+    font-family: "Raleway Extra Bold";
+    src: url(../fonts/Raleway-ExtraBold.ttf);
+}
+
+@font-face {
+    font-family: "Raleway Regular";
+    src: url(../fonts/Raleway-Regular.ttf);
+}
+
+@font-face {
+    font-family: "Roboto Black";
+    src: url(../fonts/Roboto-Black.ttf);
+}
+
+@font-face {
+    font-family: "Roboto Black Italic";
+    src: url(../fonts/Roboto-Black-Italic.ttf);
+}
+
+@font-face {
+    font-family: "Roboto Bold";
+    src: url(../fonts/Roboto-Bold.ttf);
+}
+
+@font-face {
+    font-family: "Roboto Regular";
+    src: url(../fonts/Roboto-Regular.ttf);
+}
+body{
+    margin: 0;
+    background: linear-gradient(to bottom,rgba(219,238,242,1)0%,rgba(143,201,212,1) 100%);
+}
 /*-----header-----*/
 .header_background {
-    /*background: url("../images/indexBack.jpg");
-    background-size: cover;*/
+    background: url("../images/indexBack.jpg");
+    background-size: cover;
+    width: 100%; /*Для чего это у вас?*/
+    /*float: left; Для чего это у вас?*/
     height: 700px;
-    background-color: #abeafa;
+    /*background-color: #abeafa;*/
 }
 
 .header {
-    width: 90%;
-    margin: 0 auto;
+    width: 1170px; /*ширина внутреннего блока*/
+    margin: 0 auto; /*выравниваем блок по центру*/
     position: relative;
 }
 
@@ -19,30 +74,34 @@
 }
 
 #logo {
-    margin: 20px 0 0 20px;
+    margin: 70px 0 0 25px;
 }
 
-.social_network ul {
-    text-align: right;
-    list-style-type: none;
-    margin-right: 30px;
+.social_network {
     position: absolute;
     right: 35px;
     top: 30px;
+    display: flex;
+    width: 145px;
+    justify-content: space-between;
 }
 
-.social_network ul li {
-    display: inline-block;
-    margin: 10px;
+.social_network a {
+    text-decoration: none;
 }
 
-.social_network ul li a img {
-    height: 20px;
+.social_network i {
+    color: #fff;
 }
 
+.social_network i:hover {
+    color: #abeafa;
+}
 .welcome_board {
-    display: inline-block;
-    float: left;
+    position: absolute;
+    top: 336px;
+    /*display: inline-block;
+    float: left;*/
     height: 300px;
     width: 270px;
     background-color: #fff51f;
@@ -51,47 +110,105 @@
 }
 
 .welcome_board h3 {
+    font-family: "Raleway Bold", sans-serif;
+    color: #333333;
     font-size: 32px;
-    text-align: center;
+    font-weight:700;
+    text-transform: uppercase; /*делает все буквы заглавные*/
+
 }
 
 .welcome_board p {
-    margin-top: 40px;
-    font-size: 16px;
+    font-family: "Raleway Bold Italic", sans-serif;
+    color: #333333;
+    margin-top: 24px;
+    font-size: 18px;
+    line-height:14px;
+
+
 }
 
 .right_top_board {
-    display: inline-block;
-    float: right;
-    height: 300px;
-    width: 270px;
-    color: #fff51f;
-    padding: 80px 25px 0 25px;
-    box-sizing: border-box;
+    position: absolute;
+    right: 50px;
+    top: 250px;
+    width: 300px; ;
+
 }
 
 .right_top_board h3 {
-    font-size: 32px;
-    text-align: center;
+    font-family: "Raleway Extra Bold", sans-serif;
+    color: #fff51f;
+    font-size: 48px;
+    line-height: 34px;
+    text-transform: uppercase;
 }
 
 .right_top_board p {
-    margin-top: 40px;
-    font-size: 16px;
+    font-family: "Raleway Regular", sans-serif;
+    color: #fff51f;
+    font-size: 18px;
+    margin-top: 5px;
+}
+
+.buy_button {
+    background-color: #fff51f;
+    width: 124px;
+    height: 49px;
+    display: block;
+    line-height: 49px;
+    text-decoration: none;
+    text-align: center;
+    font-size: 14px;
+    font-family: "Raleway Black", sans-serif;
+    text-transform: uppercase;
+    color: #000;
+    margin-top: 62px;
+}
+
+.buy_button:hover {
+    color: #fff51f;
+    background-color: #000;
 }
 
 /*-----container-----*/
-.container {
+.container_background{
+    /* width: 100%;
+    float: left;
+    min-height: 800px;*/
     margin-top: -20px;
 }
-
+.container {
+     margin: 0 auto;
+    width: 1170px;
+   /*min-height: inherit;*/
+  }
+.container_background:after,
+.container:after {
+    content: '';
+    clear: both;
+    display: block;
+}
+/*-----menu-----*/
+.menu{
+    width: 270px;
+    float: left;
+}
 .menu ul {
     list-style-type: none;
     width: 270px;
-    height: 66px;
+    /*height: 66px;*/ /*долго провозился с тем почему картинка nowisopen налезает на меню*/
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.menu_ul:after {
+    content: '';
+    clear: both;
+    display: block;
 }
 
-.menu_header {
+.menu_header { /*переделать с first child*/
     background-color: #333333;
     color: white;
     height: 66px;
@@ -99,9 +216,23 @@
 }
 
 .menu_header a {
-    padding-left: 40px;
-}
+    padding-left: 60px;
+    display: block;
+    height: 66px;
+    line-height: 66px;
+    text-transform: uppercase;
+    font-family: "Roboto Black", sans-serif;
+    font-size: 14px;
+    text-decoration: none;
+    background: #333;
+    color: #fff;
 
+
+}
+.menu_header a:hover {
+    background-color: #333;
+    color: #fff;
+}
 .menu_button {
     background-color: #26d2fc;
     color: black;
@@ -109,10 +240,256 @@
     line-height: 44px;
 
 }
-.menu_button{
+.menu_button a{
     padding-left: 60px;
+    display: block;
+    height: 43px;
+    line-height: 43px;
+    text-transform: uppercase;
+    font-family: "Roboto Black", sans-serif;
+    font-size: 14px;
+    color: #000;
+    text-decoration: none;
+
 }
-.menu_button:hover {
-    background-color: #333333;
-    color: white;
+.menu_button a:hover {
+    background-color: #333;
+    color: #fff;
+}
+
+.menu_nowIsOpen_background{
+    margin-top: 30px;
+    height: 300px;
+    border: 10px solid white;
+    box-sizing: border-box;
+
+}
+
+.menu_nowIsOpen {
+    width: 100%;
+    height: 100%;
+    background: url(../images/store.jpg) no-repeat;
+}
+
+.menu_nowIsOpen span {
+    font-family: "Raleway Black Italic", sans-serif;
+    font-size: 36px;
+    text-transform: uppercase;
+    position: relative;
+    top: 129px;
+    left: 142px;
+    color: #333;
+}
+/*------content-------*/
+.content {
+    width: 870px;
+    float: right;
+}
+.contentHeader {
+    height: 78px;
+    line-height: 78px;
+    padding: 0 25px;
+    background: #f8f8f8;
+    font-family: "Roboto Black Italic", sans-serif;
+    font-size: 22px;
+    text-transform: uppercase;
+    color: #707070;
+    margin-bottom: 30px;
+}
+
+.productsWrap {
+    margin-bottom: 30px;
+}
+
+.saleProducts {
+    margin-bottom: 0;
+}
+
+.productsWrap:after {
+    content: '';
+    clear: both;
+    display: block;
+}
+
+.productUnit {
+    background-color: #ffffff;
+    width: 270px;
+    height: 320px;
+    float: left;
+    padding: 10px;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.productUnit:not(:nth-child(3n)) {
+    margin-right: 30px;
+}
+
+.productUnit:nth-child(n+4) {
+    margin-top: 30px;
+}
+
+.productUnitNew:before,
+.productUnitHot:before {
+    font-family: "Roboto Regular", sans-serif;
+    font-size: 9px;
+    color: #fff;
+    padding: 9px 0 0 22px;
+    box-sizing: border-box;
+    text-transform: uppercase;
+    width: 46px;
+    height: 46px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 1;
+}
+
+.productUnitNew:before {
+    content: "NEW";
+    background: url(../images/new-corner.png) no-repeat;
+}
+
+.productUnitHot:before {
+    content: "HOT";
+    background: url(../images/hot-corner.png) no-repeat;
+}
+
+.productImg {
+    width: 100%;
+    height: 235px;
+    margin-bottom: 19px;
+}
+
+.productName {
+    width: 155px;
+    font-family: "Roboto Black Italic", sans-serif;
+    font-size: 14px;
+    color: #333;
+    float: left;
+    max-height: 2.4em;
+    overflow: hidden;
+}
+
+.productPriceWrap {
+    float: right;
+    font-family: "Roboto Black Italic", sans-serif;
+    color: #333;
+    text-align: right;
+}
+
+.actualPrice {
+    font-size: 18px;
+}
+
+.oldPrice {
+    color: #e24602;
+    font-size: 14px;
+    text-decoration: line-through;
+}
+/*------brands-------*/
+.brands {
+    position: relative;
+    top: 30px;
+    clear: both;
+    height: 160px;
+    background: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 14px;
+    box-sizing: border-box;
+}
+/*------instaFeedImages-------*/
+.istagramFeedWrap {
+    height: 350px;
+    background-color: #eaeaea;
+    padding-top: 50px;
+    box-sizing: border-box;
+}
+
+.instaFeedHead {
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    font-family: "Roboto Black Italic", sans-serif;
+}
+
+.instaFeedHead i {
+    font-size: 32px;
+    font-weight: bold;
+    position: relative;
+    top: 5px;
+}
+
+.instaFeedHead span {
+    font-size: 22px;
+}
+
+.instaFeedImages {
+    margin-top: 29px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.instaFeedImages img {
+    border: 8px solid #fff;
+    box-sizing: border-box;
+}
+/*------socialButtons-------*/
+.socialButtonsWrap {
+    height: 150px;
+    display: flex;
+}
+
+.socialButtonsWrap a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: calc(100%/3);
+    height: inherit;
+    text-decoration: none;
+    color: #fff;
+    font-size: 4rem;
+}
+
+.socialButtonsWrap a:nth-child(1) {
+    background-color: #3b5997;
+}
+
+.socialButtonsWrap a:nth-child(2) {
+    background-color: #3fccfd;
+}
+
+.socialButtonsWrap a:nth-child(3) {
+    background-color: #cb2027;
+}
+/*------footer-------*/
+.footer_background {
+    background-color: #373737;
+    color: #fff;
+}
+
+.footer {
+    width: 1170px;
+    margin: 0 auto;
+    min-height: 343px;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 75px;
+    box-sizing: border-box;
+}
+.columnTitle {
+    font-family: "Raleway Extra Bold", sans-serif;
+    font-size: 18px;
+    margin-bottom: 28px;
+}
+
+.columnLinks a {
+    font-family: "Roboto Regular", sans-serif;
+    font-size: 12px;
+    color: inherit;
+    text-decoration: none;
+    display: block;
+    margin-bottom: 4px;
 }
